...
"keygen.expiry_6_months" = "6 months";
"keygen.expiry_1_year" = "1 year";
"keygen.expiry_2_years" = "2 years";
"keygen.expiry_5_years" = "5 years";
"keygen.passphrase" = "Passphrase";
"keygen.confirm_passphrase" = "Confirm Passphrase";
"keygen.passphrases_no_match" = "Passphrases do not match";
"keygen.store_in_keychain" = "Store passphrase in Keychain";
"keygen.cancel" = "Cancel";
"keygen.generate" = "Generate";
"keygen.generating" = "Generating key...";
"keygen.please_wait" = "This may take a moment";
"keygen.done" = "Done";

/* MARK: - Encryption View */
"encrypt.title" = "Encrypt";
...
